# BentoMod

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.agents/rules/: antigravity-rtk-rules.md
.github/workflows/: release.yml
bentomod/: Cargo.toml  biome.json  build.rs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tauri.conf.json  tsconfig.json  tsconfig.node.json  vite.config.ts
bentomod/assets/utoc_bypass/: Ultimate ASI Loader License.txt
bentomod/src/: App.css  App.tsx  character_data.rs  crash_monitor.rs  discord_presence.rs  install_mod.rs  ip_obfuscation.rs  main.tsx  main_tauri.rs  merge_command.rs  toast_events.rs  uasset_api_integration.rs  uasset_detection.rs  utils.rs  utoc_utils.rs
bentomod/src/components/: AddModSplitButton.tsx  AlertHandler.tsx  ChangelogModal.css  (+45 more)
bentomod/wix/: main.wxs
oodle_loader/: Cargo.toml
oodle_loader/src/: lib.rs
scripts/: Build-Submodule.ps1  Build-Website.ps1  Init-Submodule.ps1  Install-BentoMod.ps1  Push-Submodule.ps1  Uninstall-BentoMod.ps1  Update-Submodule.ps1
scripts/Repak-X_scripts/: build_and_package.bat  build_and_package.ps1  build_app.ps1  build_contributor.bat  build_contributor.ps1  package_release.ps1  push_backend.ps1  push_frontend.ps1  run_app.ps1  run_dev.bat  version_bump.ps1
uasset_toolkit/: README.md
uasset_toolkit/uasset_app/: Cargo.toml  build.rs
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: faq.md  getting-started.md  intro.md
(+74 files in other folders)
